# BreakOut

./: .gitignore  BreakOut.sln  BreakOut.vcxproj  BreakOut.vcxproj.filters  CMakeLists.txt
shaders/: fragment.glsl  particle.frag  particle.vert  post_processing.frag  post_processing.vert  sprite.frag  sprite.vert  text.fragm  text.vertx  vertex.glsl
src/: Shader.cpp  Shader.h  ball_object.cpp  ball_object.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  main.cpp  particle_generator.cpp  particle_generator.h  post_processor.cpp  post_processor.h  power_up.h  resource_manager.cpp  resource_manager.h  sprite_renderer.cpp  sprite_renderer.h  text_renderer.cpp  text_renderer.h  texture.cpp  texture.h
